--- a/SwaggerUI/SwaggerUI/SwaggerUI.csproj
+++ b/SwaggerUI/SwaggerUI/SwaggerUI.csproj
@@ -4,5 +4,14 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>C:\Projects\Asp.net Core\SwaggerUI2\SwaggerUI\SwaggerUI\SwaggerUI.xml</DocumentationFile>
+    <NoWarn>1701;1702;1591</NoWarn>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.0.0-rc4" />
+  </ItemGroup>
+
 
 </Project>
